# SPDX-License-Identifier: GPL-3.0-or-later

file(GLOB_RECURSE TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

juce_add_console_app(test_element)
target_sources(test_element PRIVATE ${TEST_SOURCES})
target_link_libraries(test_element PRIVATE kv::element)
target_include_directories(test_element 
    PRIVATE 
        "${CMAKE_CURRENT_SOURCE_DIR}"
        ${GENERATED_INCLUDE_DIR}
        ${Boost_INCLUDE_DIRS})
target_compile_definitions(test_element
    PRIVATE
        EL_TEST_SOURCE_ROOT="${CMAKE_SOURCE_DIR}")

# Register all test suites with CTest
add_test(NAME "AtomTests" COMMAND test_element --run_test=AtomTests)
add_test(NAME "AudioRoutingTests" COMMAND test_element --run_test=AudioRoutingTests)
add_test(NAME "BytesTest" COMMAND test_element --run_test=BytesTest)
add_test(NAME "DataPathTests" COMMAND test_element --run_test=DataPathTests)
add_test(NAME "DSPScriptTest" COMMAND test_element --run_test=DSPScriptTest)
add_test(NAME "Element" COMMAND test_element --run_test=Element)
add_test(NAME "GraphNodeTests" COMMAND test_element --run_test=GraphNodeTests)
add_test(NAME "IONodeTests" COMMAND test_element --run_test=IONodeTests)
add_test(NAME "LinearFadeTest" COMMAND test_element --run_test=LinearFadeTest)
add_test(NAME "MidiChannelMapTest" COMMAND test_element --run_test=MidiChannelMapTest)
add_test(NAME "MidiProgramMapTests" COMMAND test_element --run_test=MidiProgramMapTests)
add_test(NAME "NodeFactoryTests" COMMAND test_element --run_test=NodeFactoryTests)
add_test(NAME "NodeObjectTests" COMMAND test_element --run_test=NodeObjectTests)
add_test(NAME "NodeTests" COMMAND test_element --run_test=NodeTests)
add_test(NAME "OversamplerTests" COMMAND test_element --run_test=OversamplerTests)
add_test(NAME "PluginManagerTests" COMMAND test_element --run_test=PluginManagerTests)
add_test(NAME "PortListTests" COMMAND test_element --run_test=PortListTests)
add_test(NAME "PortTypeTests" COMMAND test_element --run_test=PortTypeTests)
add_test(NAME "RootGraphTests" COMMAND test_element --run_test=RootGraphTests)
add_test(NAME "ScriptInfoTest" COMMAND test_element --run_test=ScriptInfoTest)
add_test(NAME "ScriptLoaderTest" COMMAND test_element --run_test=ScriptLoaderTest)
add_test(NAME "ScriptManagerTest" COMMAND test_element --run_test=ScriptManagerTest)
add_test(NAME "ScriptPlayground" COMMAND test_element --run_test=ScriptPlayground)
add_test(NAME "SessionChangedTest" COMMAND test_element --run_test=SessionChangedTest)
add_test(NAME "ShuttleTests" COMMAND test_element --run_test=ShuttleTests)
add_test(NAME "ToggleGridTest" COMMAND test_element --run_test=ToggleGridTest)
add_test(NAME "UpdateTests" COMMAND test_element --run_test=UpdateTests)
add_test(NAME "VelocityCurveTest" COMMAND test_element --run_test=VelocityCurveTest)
